corpus/arrays.txt
================================================================================
Empty Array
================================================================================

[]

--------------------------------------------------------------------------------

(document
  (array))


================================================================================
Array Of Double Strings
================================================================================

["a", "b", "c"]

--------------------------------------------------------------------------------

(document
  (array
    (string
      (string_content))
    (string
      (string_content))
    (string
      (string_content))))

================================================================================
Array Of Single Strings
================================================================================

['a', 'b', 'c']

--------------------------------------------------------------------------------

(document
  (array
    (string
      (string_content))
    (string
      (string_content))
    (string
      (string_content))))

================================================================================
Array Of Numbers
================================================================================

[1, 2, 3]

--------------------------------------------------------------------------------

(document
  (array
    (number)
    (number)
    (number)))

================================================================================
Array Of Double Strings, Single Strings, and Numbers
================================================================================

["a", 1, 'b', 2]

--------------------------------------------------------------------------------

(document
  (array
    (string
      (string_content))
    (number)
    (string
      (string_content))
    (number)))
