corpus/objects.txt
================================================================================
Empty Object
================================================================================

{}

--------------------------------------------------------------------------------

(document
  (object))

================================================================================
Object
================================================================================

{
  "someKey": "someString",
  "someKeyB": 1,
}

--------------------------------------------------------------------------------

(document
  (object
    (objectEntry
      (string
        (string_content))
      (string
        (string_content)))
    (objectEntry
      (string
        (string_content))
      (number))))

================================================================================
Nested Object
================================================================================

{
  "someObject": {
    "someNestedKey": "someString",
  },
  "someKeyB": 1,
}

--------------------------------------------------------------------------------

(document
  (object
    (objectEntry
      (string
        (string_content))
      (object
        (objectEntry
          (string
            (string_content))
          (string
            (string_content)))))
    (objectEntry
      (string
        (string_content))
      (number))))
