corpus/strings.txt
================================================================================
Double String
================================================================================

"someString"

--------------------------------------------------------------------------------

(document
  (string
    (string_content)))

================================================================================
Single String
================================================================================

'someString'

--------------------------------------------------------------------------------

(document
  (string
    (string_content)))

================================================================================
Empty Double String
================================================================================

""

--------------------------------------------------------------------------------

(document
  (string))

================================================================================
Empty Single String
================================================================================

''

--------------------------------------------------------------------------------

(document
  (string))
