test/corpus/expressions.txt
================================================================================
Equality Expression A
================================================================================

true == true

--------------------------------------------------------------------------------

(document
  (equality_expression
    left: (true)
    right: (true)))

================================================================================
Inequality Expression A
================================================================================

true != true

--------------------------------------------------------------------------------

(document
  (inequality_expression
    left: (true)
    right: (true)))

================================================================================
Less Than Expression
================================================================================

1 < 1

--------------------------------------------------------------------------------

(document
  (less_than_expression
    left: (number)
    right: (number)))

================================================================================
Less Than Or Equal Expression
================================================================================

1 <= 1

--------------------------------------------------------------------------------

(document
  (less_than_or_equal_expression
    left: (number)
    right: (number)))

================================================================================
Greater Than Expression
================================================================================

1 > 1

--------------------------------------------------------------------------------

(document
  (greater_than_expression
    left: (number)
    right: (number)))

================================================================================
Greater Than Or Equal Expression
================================================================================

1 >= 1

--------------------------------------------------------------------------------

(document
  (greater_than_or_equal_expression
    left: (number)
    right: (number)))

================================================================================
In Expression
================================================================================

"a" in ["a", "b", "c"]

--------------------------------------------------------------------------------

(document
  (in_expression
    left: (string
      (string_content))
    right: (array
      (string
        (string_content))
      (string
        (string_content))
      (string
        (string_content)))))

================================================================================
Match Expression
================================================================================

"a" match "a"

--------------------------------------------------------------------------------

(document
  (match_expression
    left: (string
      (string_content))
    right: (string
      (string_content))))

================================================================================
Logical And Expression A
================================================================================

true && true

--------------------------------------------------------------------------------

(document
  (logical_and_expression
    left: (true)
    right: (true)))

================================================================================
Logical And Expression B
================================================================================

true && true && true

--------------------------------------------------------------------------------

(document
  (logical_and_expression
    left: (true)
    right: (logical_and_expression
      left: (true)
      right: (true))))

================================================================================
Logical Or Expression A
================================================================================

true || true

--------------------------------------------------------------------------------

(document
  (logical_or_expression
    left: (true)
    right: (true)))

================================================================================
Logical Or Expression B
================================================================================

true || true || true

--------------------------------------------------------------------------------

(document
  (logical_or_expression
    left: (true)
    right: (logical_or_expression
      left: (true)
      right: (true))))

================================================================================
Logical And Or Expression
================================================================================

true || false && true || false && false

--------------------------------------------------------------------------------

(document
  (logical_or_expression
    left: (true)
    right: (logical_and_expression
      left: (false)
      right: (logical_or_expression
        left: (true)
        right: (logical_and_expression
          left: (false)
          right: (false))))))

================================================================================
Unary Plus Expression
================================================================================

+1

--------------------------------------------------------------------------------

(document
  (unary_plus_expression
    right: (number)))

================================================================================
Unary Plus Expression With Parenthesis Expression
================================================================================

+(1)

--------------------------------------------------------------------------------

(document
  (unary_plus_expression
    right: (parenthesis_expression
      expression: (number))))

================================================================================
Unary Minus Expression
================================================================================

-1

--------------------------------------------------------------------------------

(document
  (unary_minus_expression
    right: (number)))

================================================================================
Unary Minus Expression With Parenthesis Expression
================================================================================

-(1)

--------------------------------------------------------------------------------

(document
  (unary_minus_expression
    right: (parenthesis_expression
      expression: (number))))

================================================================================
Binary Plus Expression A
================================================================================

1 + 1

--------------------------------------------------------------------------------

(document
  (binary_plus_expression
    left: (number)
    right: (number)))

================================================================================
Binary Plus Expression B
================================================================================

1 + 1 + 1

--------------------------------------------------------------------------------

(document
  (binary_plus_expression
    left: (binary_plus_expression
      left: (number)
      right: (number))
    right: (number)))

================================================================================
Binary Minus Expression A
================================================================================

1 - 1

--------------------------------------------------------------------------------

(document
  (binary_minus_expression
    left: (number)
    right: (number)))

================================================================================
Binary Minus Expression B
================================================================================

1 - 1 - 1

--------------------------------------------------------------------------------

(document
  (binary_minus_expression
    left: (binary_minus_expression
      left: (number)
      right: (number))
    right: (number)))

================================================================================
Binary Star Expression A
================================================================================

1 * 1

--------------------------------------------------------------------------------

(document
  (binary_star_expression
    left: (number)
    right: (number)))

================================================================================
Binary Star Expression B
================================================================================

1 * 1 * 1

--------------------------------------------------------------------------------

(document
  (binary_star_expression
    left: (binary_star_expression
      left: (number)
      right: (number))
    right: (number)))

================================================================================
Binary Double Star Expression A
================================================================================

1 ** 1

--------------------------------------------------------------------------------

(document
  (binary_double_star_expression
    left: (number)
    right: (number)))

================================================================================
Binary Double Star Expression B
================================================================================

1 ** 1 ** 1

--------------------------------------------------------------------------------

(document
  (binary_double_star_expression
    left: (number)
    right: (binary_double_star_expression
      left: (number)
      right: (number))))

================================================================================
Binary Slash Expression A
================================================================================

1 / 1

--------------------------------------------------------------------------------

(document
  (binary_slash_expression
    left: (number)
    right: (number)))

================================================================================
Binary Slash Expression B
================================================================================

1 / 1 / 1

--------------------------------------------------------------------------------

(document
  (binary_slash_expression
    left: (binary_slash_expression
      left: (number)
      right: (number))
    right: (number)))

================================================================================
Binary Percent Expression A
================================================================================

1 % 1

--------------------------------------------------------------------------------

(document
  (binary_percent_expression
    left: (number)
    right: (number)))

================================================================================
Binary Percent Expression B
================================================================================

1 % 1 % 1

--------------------------------------------------------------------------------

(document
  (binary_percent_expression
    left: (binary_percent_expression
      left: (number)
      right: (number))
    right: (number)))


================================================================================
Parenthesis Expression
================================================================================

(1)

--------------------------------------------------------------------------------

(document
  (parenthesis_expression
    expression: (number)))

================================================================================
Nested Parenthesis Expression
================================================================================

((null))

--------------------------------------------------------------------------------

(document
  (parenthesis_expression
    expression: (parenthesis_expression
      expression: (null))))

================================================================================
This Expression
================================================================================

@._id

--------------------------------------------------------------------------------

(document
  (attribute_access_traversal_expression
    base: (this_expression)
    scope: (identifier)))
