test/corpus/identifiers.txt
================================================================================
Identifier A
================================================================================

someIdentifier

--------------------------------------------------------------------------------

(document
  (identifier))

================================================================================
Identifier B
================================================================================

_someIdentifier

--------------------------------------------------------------------------------

(document
  (identifier))

================================================================================
Identifier C
================================================================================

someIdentifier123

--------------------------------------------------------------------------------

(document
  (identifier))

================================================================================
Identifier D
================================================================================

_someIdentifier_123_

--------------------------------------------------------------------------------

(document
  (identifier))

================================================================================
Parameter A
================================================================================

$someIdentifier

--------------------------------------------------------------------------------

(document
  (identifier
    (parameter)))
