test/corpus/objects.txt
================================================================================
Empty Object
================================================================================

{}

--------------------------------------------------------------------------------

(document
  (object))

================================================================================
Object
================================================================================

{
  "someKey": "someString",
  "someKeyB": 1,
}

--------------------------------------------------------------------------------

(document
  (object
    (object_entry
      (string
        (string_content))
      (string
        (string_content)))
    (object_entry
      (string
        (string_content))
      (number))))

================================================================================
Nested Object
================================================================================

{
  "someObject": {
    "someNestedKey": "someString",
  },
  "someKeyB": 1,
}

--------------------------------------------------------------------------------

(document
  (object
    (object_entry
      (string
        (string_content))
      (object
        (object_entry
          (string
            (string_content))
          (string
            (string_content)))))
    (object_entry
      (string
        (string_content))
      (number))))
