test/corpus/pairs.txt
================================================================================
Pair A
================================================================================

somePredicate => "someString"

--------------------------------------------------------------------------------

(document
  (pair
    key: (identifier)
    value: (string
      (string_content))))
